fix: fix z-index on categories menu

--- a/apps/encontrar/src/styles/styles.css
+++ b/apps/encontrar/src/styles/styles.css
@@ -4940,7 +4940,7 @@ button > i {
     width: 100%;
     /* position: sticky; */
     /* top: 106px; */
-    z-index: 1001;
+    z-index: 99999;
   }
   .mobile-categories-bar::-webkit-scrollbar {
     display: none;
